<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_up"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/gilroy_bold"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:padding="12dp"
        android:inputType="text"
        android:textColor="@color/colorText"
        android:fontFamily="@font/gilroy_light"
        android:background="@color/colorTextBackground"
        android:hint="@string/Enter_name"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"
        android:fontFamily="@font/gilroy_light"
        android:background="@color/colorTextBackground"
        android:hint="@string/Enter_email"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:padding="12dp"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:fontFamily="@font/gilroy_light"
        android:background="@color/colorTextBackground"
        android:hint="@string/Enter_password"/>
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:padding="12dp"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:fontFamily="@font/gilroy_light"
        android:background="@color/colorTextBackground"
        android:hint="@string/Enter_confirm_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:text="@string/btn_sign_up"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:text="@string/login"/>
    </LinearLayout>

</LinearLayout>